devops/kustomize/overlays/preview/patches/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      imagePullSecrets:
        - name: ghcr-creds
      containers:
        - name: app
          imagePullPolicy: IfNotPresent
