devops/kustomize/overlays/preview/patches/minio-ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-api
spec:
  rules:
    - host: $(PREVIEW_SLUG).$(PREVIEW_DOMAIN)
      http:
        paths:
          - path: /buckets
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
          - path: /buckets/torus-media
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
          - path: /buckets/torus-xapi
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
          - path: /buckets/torus-blob-dev
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: http
