devops/kustomize/overlays/preview/patches/minio-ingress-console.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
spec:
  rules:
    - host: $(PREVIEW_SLUG).$(PREVIEW_DOMAIN)
      http:
        paths:
          - path: /minio
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  name: console
